@@ -6,6 +6,7 @@ Release 0.6.8
 * artefacts are computed as medians and not means over the signal
 * can turn off shared memory if needed
 * fixes for conversion of old dataset with python GUI
+* smooth exit if fitting with 0 templates (thanks to Alex Gonzalez)
 
 =============
 Release 0.6.7
